@@ -1,0 +1,16 @@
+use strict;
+use warnings;
+package MooseX::Role::Parameterised;
+# vim: set ts=8 sts=4 sw=4 tw=115 et :
+# ABSTRACT: Moose roles with composition parameters
+
+our $VERSION = '1.10';
+
+__END__
+
+=head1 SYNOPSIS
+
+See L<MooseX::Role::Parameterized>; this module is just a stub to help the
+civilised Perl users find this distribution with search engines. :)
+
+=cut
